--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
                   type="checkbox"
                   name="time"
                   value="morning"
-                  class="search-form__checkbox visually-hidden"
+                  class="search-form__checkbox visually-hidden-checkbox"
+                  checked
                 />
                 <span class="search-form__pseudo-checkbox"></span>
                 <span class="search-form__label-text">Утро</span>
@@ -47,7 +48,8 @@
                   type="checkbox"
                   name="time"
                   value="afternoon"
-                  class="search-form__checkbox visually-hidden"
+                  class="search-form__checkbox visually-hidden-checkbox"
+                  checked
                 />
                 <span class="search-form__pseudo-checkbox"></span>
                 <span class="search-form__label-text">День</span>
@@ -57,7 +59,8 @@
                   type="checkbox"
                   name="time"
                   value="night"
-                  class="search-form__checkbox visually-hidden"
+                  class="search-form__checkbox visually-hidden-checkbox"
+                  checked
                 />
                 <span class="search-form__pseudo-checkbox"></span>
                 <span class="search-form__label-text">Ночь</span>
