Проект Посмотри в окно

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                   type="checkbox"
                   name="time"
                   value="morning"
-                  class="search-form__checkbox visually-hidden-checkbox"
+                  class="search-form__checkbox visually-hidden"
                   checked
                 />
                 <span class="search-form__pseudo-checkbox"></span>
@@ -48,7 +48,7 @@
                   type="checkbox"
                   name="time"
                   value="afternoon"
-                  class="search-form__checkbox visually-hidden-checkbox"
+                  class="search-form__checkbox visually-hidden"
                   checked
                 />
                 <span class="search-form__pseudo-checkbox"></span>
@@ -59,7 +59,7 @@
                   type="checkbox"
                   name="time"
                   value="night"
-                  class="search-form__checkbox visually-hidden-checkbox"
+                  class="search-form__checkbox visually-hidden"
                   checked
                 />
                 <span class="search-form__pseudo-checkbox"></span>
